--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
     implementation "io.reactivex.rxjava2:rxandroid:${rxJavaAndroidVersion}"
 
+    implementation "com.yuyakaido.android:card-stack-view:1.0.0-beta9"
+
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-v4:27.1.1'
