--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
     implementation "io.reactivex.rxjava2:rxandroid:${rxJavaAndroidVersion}"
 
+    compile 'com.mindorks:placeholderview:0.7.3'
+
     implementation "com.yuyakaido.android:card-stack-view:1.0.0-beta9"
 
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
